# no-fri-push

./: .goreleaser.yaml  .tagpr  CHANGELOG.md  Cargo.toml  Makefile.toml
.github/actions/release/: action.yml
.github/workflows/: build-test.yml  release-test.yml  tagpr.yml
src/: main.rs
tests/: cli_test.rs
