[package]
name = "no-fri-push"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
anyhow = "1.0.75"
mlua = { version = "0.9", features = ["vendored", "lua54", "async", "send"] }
thiserror = "2.0.11"
tokio = { version = "1.37.0", features = ["full"] }
# cargo-nextest = "0.9.88"
tempfile = "3.15.0"
unicode-width = "0.1"
assert_cmd = "2"
predicates = "2"
